--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -31,12 +31,14 @@
             android:id="@+id/tvTitlePlayer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/tvArtistPlayer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:text="TextView" />
     </LinearLayout>
 
