--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,13 @@
         android:id="@+id/navigation_player"
         android:name="com.css101.musicplayer.presentation.ui.player.PlayerFragment"
         android:label="@string/player"
-        tools:layout="@layout/fragment_player" />
+        tools:layout="@layout/fragment_player">
+        <argument
+            android:name="audioFile"
+            app:nullable="true"
+            android:defaultValue="@null"
+            app:argType="com.css101.musicplayer.domain.models.AudioFile" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_list"
@@ -21,6 +27,7 @@
             app:destination="@id/navigation_player">
             <argument
                 android:name="audioFile"
+                app:nullable="true"
                 app:argType="com.css101.musicplayer.domain.models.AudioFile" />
         </action>
     </fragment>
