--- a/app/src/main/res/layout-land/fragment_player.xml
+++ b/app/src/main/res/layout-land/fragment_player.xml
@@ -12,21 +12,22 @@
         android:layout_height="256dp"
         android:layout_margin="@dimen/def_margin"
         android:contentDescription="@string/coverart"
-        app:srcCompat="@drawable/img_no_album"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_no_album" />
 
     <LinearLayout
         android:id="@+id/llTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/def_margin"
         android:gravity="center"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@+id/ivCover"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivCover">
+        app:layout_constraintStart_toEndOf="@+id/ivCover"
+        app:layout_constraintTop_toTopOf="@+id/ivCover">
 
         <TextView
             android:id="@+id/tvTitlePlayer"
@@ -49,10 +50,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/def_margin"
         android:contentDescription="@string/play_pause"
-        app:srcCompat="@drawable/ic_play"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llTitle" />
+        app:layout_constraintStart_toEndOf="@+id/ivCover"
+        app:layout_constraintTop_toBottomOf="@+id/llTitle"
+        app:srcCompat="@drawable/ic_play" />
 
     <TextView
         android:id="@+id/tvEmpty"
